k8rpl-tp.yml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sreplicalimits
  annotations:
    metadata.gatekeeper.sh/title: "Replica Limits"
    description: >-
      Requires that objects with the field `spec.replicas` (Deployments,
      ReplicaSets, etc.) specify a number of replicas within defined ranges.
spec:
  crd:
    spec:
      names:
        kind: K8sReplicaLimits
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            min_replicas:
              type: integer
            max_replicas:
              type: integer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sreplicalimits
        deployment_name = input.review.object.metadata.name
        
        violation[{"msg": msg}] {
            not input.review.object.spec.replicas
            msg := sprintf("Minimum replicas requireds: %v", [input.review.object.spec.replicas,input.review.object.spec. ,input.parameters.min_replicas])
        }

        violation[{"msg": msg}] {
            input.review.object.spec.replicas < input.parameters.min_replicas
            msg := sprintf("Minimum replicas requireds: %v", [input.parameters.min_replicas, input.request.object.spec.replicas])
        }

        violation[{"msg": msg}] {
            input.review.object.spec.replicas > input.parameters.max_replicas
            msg := sprintf("Maximum replicas requireds: %v", [input.parameters.max_replicas, input.request.object.spec.replicas])
        }
